--- a/src/Pages/movieForm/movieForm.css
+++ b/src/Pages/movieForm/movieForm.css
@@ -54,8 +54,8 @@
 .movie-form__input:focus,
 .movie-form__textarea:focus {
     outline: none;
-    border-color: #ff3c3c;
-    box-shadow: 0 0 8px rgba(255, 60, 60, 0.6);
+    border-color: #c98226;
+    box-shadow: 0 0 8px #c98226;
 }
 
 /* Textarea */
@@ -69,7 +69,7 @@
     margin-top: 10px;
     padding: 14px;
 
-    background: #ff3c3c;
+    background: #c98226;
     border: none;
     border-radius: 8px;
 
@@ -84,9 +84,9 @@
 
 /* Hover */
 .movie-form__button:hover {
-    background: #ff1f1f;
+    background: #c98226;
     transform: translateY(-2px);
-    box-shadow: 0 8px 20px rgba(255, 60, 60, 0.5);
+    box-shadow: 0 8px 20px #c98226;
 }
 
 /* Active */
